# GaussianBlur

./: CMakeLists.txt  README.md
include/gauss/: blur.hpp  image.hpp
src/: blur.cpp  gauss_cuda.cu  main.cpp  utils.cpp
